Add way to query by slug in `inPack` predicates